WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
299302
[WebXR] Inline sessions do not correctly update the visibilitystate
https://bugs.webkit.org/show_bug.cgi?id=299302
Summary
[WebXR] Inline sessions do not correctly update the visibilitystate
Sergio Villar Senin
Reported
2025-09-22 10:10:18 PDT
They must listen to the document visibility state and update theirs accordingly
Attachments
Add attachment
proposed patch, testcase, etc.
Sergio Villar Senin
Comment 1
2025-09-22 10:16:54 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/51127
EWS
Comment 2
2025-09-23 05:08:31 PDT
Committed
300383@main
(056f4d4a7024): <
https://commits.webkit.org/300383@main
> Reviewed commits have been landed. Closing PR #51127 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2025-09-23 05:10:56 PDT
<
rdar://problem/161164224
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug