[WebXR] Inline sessions do not correctly update the visibilitystate https://bugs.webkit.org/show_bug.cgi?id=299302

Reviewed by Dan Glastonbury.

Each XRSession has a visibility state value. For inline sessions the
visibility state MUST mirror the Document’s visibilityState. Modified
the WebXR session so it listens to Document's changes in visibility
and updates its state accordingly.

Test: imported/w3c/web-platform-tests/webxr/xrSession_visibilityState_inline.https.html

Test: imported/w3c/web-platform-tests/webxr/xrSession_visibilityState_inline.https.html
* LayoutTests/imported/w3c/web-platform-tests/webxr/xrSession_visibilityState_inline.https-expected.txt: Added.
* LayoutTests/imported/w3c/web-platform-tests/webxr/xrSession_visibilityState_inline.https.html: Added.
* LayoutTests/platform/wpe/TestExpectations:
* Source/WebCore/Modules/webxr/WebXRSession.cpp:
(WebCore::WebXRSession::WebXRSession):
(WebCore::WebXRSession::~WebXRSession):
(WebCore::WebXRSession::visibilityStateChanged):
* Source/WebCore/Modules/webxr/WebXRSession.h:

Canonical link: https://commits.webkit.org/300383@main